- Fixed Trac #333: organizations' drop-down list is truncated on IE when the name of an organization is too long.
SVN:trunk[977]

--- a/css/light-grey.css
+++ b/css/light-grey.css
@@ -890,3 +890,9 @@ tr.row_added td {
 a.truncated {
 	cursor: pointer;
 }
+.org_combo
+{
+	font-size:x-small;
+	width: auto;
+	max-width: 200px; 
+}
